--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "d3": "^4.9.1",
     "node-sass": "^4.13.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3"
+    "style-loader": "^1.1.3",
+    "topojson": "^3.0.2"
   }
 }
