[ops]: Renamed project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project_covid",
+  "name": "project-19",
   "version": "1.0.0",
   "description": "A project to increase Covid-19 awareness",
   "main": "index.js",
